# fastapi-template

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.azure/: config
.github/workflows/: docker-build-deploy.yml
